fixed cursor issue,calender icon issue,insert row,insertion of column in first column,text wrap etc.

--- a/src/styles.css
+++ b/src/styles.css
@@ -727,9 +727,27 @@ overflow-x: scroll;
     border: 1px solid black;
   }
 
+#input_container {
+    position:relative;
+    /*padding:0 0 0 20px;*/
+    /*margin:0 20px;*/
+    /*background:#ddd;*/
+    /*direction: rtl;*/
+    width: 100px;
+}
 .datepicker{
-  width: 100px;
-  border: 0;
+   /*height:20px;*/
+    /*margin:0;*/
+    /*padding-right: 30px;*/
+    width: 100%;
+    border: 0;
 }
 
+#input_img {
+    position:absolute;
+    bottom:-2px;
+    right:5px;
+    width:24px;
+    height:24px;
+}
 
